--- a/DesignTechHomesTest/Views/Home/About.cshtml
+++ b/DesignTechHomesTest/Views/Home/About.cshtml
@@ -4,4 +4,6 @@
 
 <div class="text-center">
     <h1 class="display-4">About</h1>
+    <img src="~/images/NothingToSee.jpg" alt="About Image" class="img-fluid" style="margin-top: 300px;"/>
 </div>
+
