--- a/DesignTechHomesTest/Views/Shared/_Layout.cshtml
+++ b/DesignTechHomesTest/Views/Shared/_Layout.cshtml
@@ -23,6 +23,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Dashboard">Dashboard</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Projects">Projects</a>
                         </li>
                         <li class="nav-item">
