--- a/DesignTechHomesTest/Views/Home/Index.cshtml
+++ b/DesignTechHomesTest/Views/Home/Index.cshtml
@@ -2,4 +2,8 @@
     ViewData["Title"] = "Custom Home Project Tracker";
 }
 
-
+<div class="text-center">
+    <h1 class="display-4">Design Tech Homes Test</h1>
+    <p>Submitted by:</p>
+    <h5>Ken Holtgrewe<br />ken.holtgrewe@gmail.com<br />(281) 546-6277</h5>
+</div>
