--- a/DesignTechHomesTest/Views/Home/_ProjectNotes.cshtml
+++ b/DesignTechHomesTest/Views/Home/_ProjectNotes.cshtml
@@ -15,7 +15,7 @@
                 <td>@note.Timestamp.ToString("g")</td>
                 <td>@note.Note</td>
                 <td>
-                    <a asp-action="EditNote" asp-route-id="@note.Id" class="btn btn-primary">Edit</a>
+                    <a asp-action="EditNote" asp-route-projectId="@note.ProjectId" asp-route-noteId="@note.Id" class="btn btn-primary">Edit</a>
                     <a asp-action="DeleteNote" asp-route-projectId="@note.ProjectId" asp-route-noteId="@note.Id" class="btn btn-danger">Delete</a>
                 </td>
             </tr>
