--- a/DesignTechHomesTest/Views/Shared/Error.cshtml
+++ b/DesignTechHomesTest/Views/Shared/Error.cshtml
@@ -3,23 +3,30 @@
     ViewData["Title"] = "Error";
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<h1 class="text-danger text-center">Error</h1>
 
-@if (Model.ShowRequestId)
-{
-    <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
-    </p>
-}
+<div class="alert alert-danger">
+    <table>
+        @if (!string.IsNullOrWhiteSpace(Model.ErrorMessage))
+        {
+            <tr>
+                <td style="width: 100px;"><strong>Message:</strong></td>
+                <td>@Model.ErrorMessage</td>
+            </tr>
+        }
+        else
+        {
+            <tr>
+                <td>An error occurred while processing your request.</td>
+            </tr>
+        }
 
-<h3>Development Mode</h3>
-<p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
-<p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
-</p>
+        @if (Model.ShowRequestId)
+        {
+           <tr>
+                <td style="width: 100px;"><strong>Request ID:</strong></td>
+                <td><code>@Model.RequestId</code></td>
+           </tr>
+        }
+    </table>
+</div>
